fixing clear fix overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,6 @@ body {
 }
 
 .clearfix {
-    overflow: auto;
     zoom: 1;
 }
 
@@ -267,7 +266,7 @@ header {
 
 .mobile-menu {
     font-size: 200%;
-    color: white;
+    color: black;
 }
 
 /*----------------------------------------------*/
@@ -350,6 +349,7 @@ header {
 
 .portPhoto {
     width: 100%;
+    height: 100%;
     margin: 0;
     overflow: hidden;
     background-color: #000;
@@ -357,7 +357,7 @@ header {
 
 .portPhoto img {
     width: 100%;
-    height: auto;
+    height: 100%;
     transform: scale(1.15);
     transition: transform 0.5s, opacity 0.5s;
     opacity: 0.7;
@@ -368,7 +368,7 @@ header {
     opacity: 1;
 }
 
-.textOverImage{
+/* .textOverImage{
     text-align: center; 
 }
 
@@ -381,7 +381,7 @@ header {
 
 .textOverImage:hover:after{
     opacity: 1;
-}
+} */
 
 /*----------------------------------------------*/
 
